--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js",
-  "dev": "nodemon index.js",
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "ts-start": "ts-node index.ts"  
+    "start": "node index.js",
+    "dev": "nodemon src/index.ts --exec ts-node src/index.ts -e ts,graphql",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ts-start": "ts-node index.ts"
   },
   "dependencies": {
+    "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
