--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon src/index.ts --exec ts-node src/index.ts -e ts,graphql",
+    "dev": "nodemon --exec \"ts-node -r graphql-import-node\" src/index.ts -e ts,graphql",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-start": "ts-node index.ts"
   },
@@ -27,7 +27,9 @@
     "express": "^4.19.2",
     "graphql": "^16.12.0",
     "graphql-import-node": "^0.0.5",
+    "graphql-merge-resolvers": "^1.1.16",
     "graphql-tools": "^9.0.22",
+    "graphql-tools-merge-typedefs": "^2.0.1",
     "ncp": "^2.0.0"
   },
   "devDependencies": {
