--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "graphql-merge-resolvers": "^1.1.16",
     "graphql-tools": "^9.0.22",
     "graphql-tools-merge-typedefs": "^2.0.1",
+    "mongoose": "^8.19.3",
     "ncp": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/mongoose": "^5.11.96",
     "@types/ncp": "^2.0.8",
     "@types/node": "^24.10.0",
     "nodemon": "^3.1.10",
